2015-07-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Updated directory list,
	harmonized settings with Doxygen configurations of other OpenVAS
	modules.

2015-07-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Updated Doxygen configuration
	files with Doxygen 1.8.8.

2015-07-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/drop_privileges.c, base/test-hosts.c, base/cvss.c, base/nvti.c,
	base/openvas_networking.c, base/openvas_hosts.c, base/settings.c,
	base/openvas_hosts.h, base/nvticache.c, base/pwpolicy.c, omp/omp.c,
	omp/xml.c, misc/openvas_server.c, misc/network.c, misc/kb.h,
	misc/ldap_connect_auth.c, misc/openvas_auth.c,
	nasl/nasl_builtin_nmap.c, nasl/wmi_interface_stub.c,
	nasl/smb_interface_stub.c, nasl/smb_crypt.c, nasl/nasl_ssh.c: Fix
	documentation issues found with Doxygen.

2015-07-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Revert r22625.

	* misc/kb_redis.c (redis_vcommand, redis_command): Remove functions.
	(try_database_index, fetch_max_db_index_compat, fetch_max_db_index)
	(select_database, redis_release_db, redis_transaction_new)
	(redis_transaction_cmd, redis_transaction_end, redis_cmd): Use
	redisCommand() and redisvCommand().

2015-06-25  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get_oids): New function.

	* base/nvticache.h: Add function prototype.

2015-06-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get_by_name_full, nvticache_get_names):
	New functions.
	(nvticache_get_by_oid_full): Use new function.
	(nvticache_get_oids): Remove function.

	* base/nvticache.h: Add prototypes.

2015-06-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_set_login): Check that username is not
	empty.
	(nasl_ssh_userauth): Return on nasl_ssh_set_login() error.

2015-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>
