@@ -1,3 +1,8 @@
+2015-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* osp/osp.c (osp_get_version): Gracefully handle errors in OSP protocol,
+	instead of using assert().
+
 2015-07-10  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* doc/Doxyfile.in, doc/Doxyfile_full.in: Updated directory list,
